compiler/lume_hir/src/snapshots/lume_hir__lower__tests__call_snapshots@function_param_1.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"let _ = call(0);\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 0,
                                    name: Identifier {
                                        name: "_",
                                        location: <internal>:23:24,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:27:33,
                                        kind: FunctionCall(
                                            FunctionCall {
                                                id: 5871781006564002453,
                                                name: 'call',
                                                type_parameters: [],
                                                arguments: [
                                                    Expression {
                                                        id: 11743562013128004906,
                                                        location: <internal>:32:33,
                                                        kind: Literal(
                                                            Literal {
                                                                id: 11743562013128004906,
                                                                location: <internal>:32:33,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: 11743562013128004906,
                                                                        value: 0,
                                                                        kind: I32,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:19:35,
                        },
                    ],
                    location: <internal>:17:37,
                },
                location: <internal>:0:37,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Variable(
                VariableDeclaration {
                    id: 0,
                    name: Identifier {
                        name: "_",
                        location: <internal>:23:24,
                    },
                    declared_type: None,
                    value: Expression {
                        id: 5871781006564002453,
                        location: <internal>:27:33,
                        kind: FunctionCall(
                            FunctionCall {
                                id: 5871781006564002453,
                                name: 'call',
                                type_parameters: [],
                                arguments: [
                                    Expression {
                                        id: 11743562013128004906,
                                        location: <internal>:32:33,
                                        kind: Literal(
                                            Literal {
                                                id: 11743562013128004906,
                                                location: <internal>:32:33,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 11743562013128004906,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                },
            ),
            location: <internal>:19:35,
        },
    },
    expressions: {
        11743562013128004906: Expression {
            id: 11743562013128004906,
            location: <internal>:32:33,
            kind: Literal(
                Literal {
                    id: 11743562013128004906,
                    location: <internal>:32:33,
                    kind: Int(
                        IntLiteral {
                            id: 11743562013128004906,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:27:33,
            kind: FunctionCall(
                FunctionCall {
                    id: 5871781006564002453,
                    name: 'call',
                    type_parameters: [],
                    arguments: [
                        Expression {
                            id: 11743562013128004906,
                            location: <internal>:32:33,
                            kind: Literal(
                                Literal {
                                    id: 11743562013128004906,
                                    location: <internal>:32:33,
                                    kind: Int(
                                        IntLiteral {
                                            id: 11743562013128004906,
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    },
}
