compiler/lume_hir/src/snapshots/lume_hir__lower__tests__call_snapshots@method_empty.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"let _ = 1.call();\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 0,
                                    name: Identifier {
                                        name: "_",
                                        location: <internal>:23:24,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:29:33,
                                        kind: MethodCall(
                                            MethodCall {
                                                id: 5871781006564002453,
                                                callee: Expression {
                                                    id: 11743562013128004906,
                                                    location: <internal>:27:28,
                                                    kind: Literal(
                                                        Literal {
                                                            id: 11743562013128004906,
                                                            location: <internal>:27:28,
                                                            kind: Int(
                                                                IntLiteral {
                                                                    id: 11743562013128004906,
                                                                    value: 1,
                                                                    kind: I32,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                                name: Identifier {
                                                    name: "call",
                                                    location: <internal>:0:0,
                                                },
                                                type_parameters: [],
                                                arguments: [],
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:19:36,
                        },
                    ],
                    location: <internal>:17:38,
                },
                location: <internal>:0:38,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Variable(
                VariableDeclaration {
                    id: 0,
                    name: Identifier {
                        name: "_",
                        location: <internal>:23:24,
                    },
                    declared_type: None,
                    value: Expression {
                        id: 5871781006564002453,
                        location: <internal>:29:33,
                        kind: MethodCall(
                            MethodCall {
                                id: 5871781006564002453,
                                callee: Expression {
                                    id: 11743562013128004906,
                                    location: <internal>:27:28,
                                    kind: Literal(
                                        Literal {
                                            id: 11743562013128004906,
                                            location: <internal>:27:28,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 11743562013128004906,
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                name: Identifier {
                                    name: "call",
                                    location: <internal>:0:0,
                                },
                                type_parameters: [],
                                arguments: [],
                            },
                        ),
                    },
                },
            ),
            location: <internal>:19:36,
        },
    },
    expressions: {
        11743562013128004906: Expression {
            id: 11743562013128004906,
            location: <internal>:27:28,
            kind: Literal(
                Literal {
                    id: 11743562013128004906,
                    location: <internal>:27:28,
                    kind: Int(
                        IntLiteral {
                            id: 11743562013128004906,
                            value: 1,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:29:33,
            kind: MethodCall(
                MethodCall {
                    id: 5871781006564002453,
                    callee: Expression {
                        id: 11743562013128004906,
                        location: <internal>:27:28,
                        kind: Literal(
                            Literal {
                                id: 11743562013128004906,
                                location: <internal>:27:28,
                                kind: Int(
                                    IntLiteral {
                                        id: 11743562013128004906,
                                        value: 1,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                    name: Identifier {
                        name: "call",
                        location: <internal>:0:0,
                    },
                    type_parameters: [],
                    arguments: [],
                },
            ),
        },
    },
}
